<resources>
    <string name="app_name">Exhaust Wear</string>
    <string name="Home">ГЛАВНАЯ</string>
    <string name="Catalog">КАТАЛОГ</string>
    <string name="Account">ПРОФИЛЬ</string>
    <string name="Shop">КОРЗИНА</string>
    <string name="Favourite">ИЗБРАННОЕ</string>
    <string name="Search">ПОИСК</string>
    <string name="top_bar_name">EXHAUST WEAR</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="group">Group</string>
    <string name="descrip">Descrip</string>
    <string name="size">Size</string>
    <string name="quantity_word">Количество:</string>
    <string name="start_quant">1</string>
    <string name="profile">"Профиль "</string>
    <string name="name_word">Имя</string>
    <string name="e_mail">E-mail</string>
    <string name="telephone_word">Телефон</string>
    <string name="change_word">Изменить</string>
    <string name="exit_word">Выйти</string>
    <string name="your_cart_is_empty">Ваша корзина пуста</string>
    <string name="make_an_order">Оформить заказ</string>
    <string name="catalog_search">Поиск по каталогу. . .</string>
    <string name="list_is_empty">Список пуст</string>
    <string name="set_an_e_mail">Введите E-mail</string>
    <string name="reset_password">Сбросить пароль</string>
    <string name="entrance">ВХОД</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="dont_have_account">Нет аккаунта?</string>
    <string name="registration">Регистрация</string>
    <string name="after_making_an_order">Оператор с Вами свяжется для подтверждения</string>
    <string name="acc_name">Имя пользователя</string>
    <string name="acc_num">Номер телефона</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="sign_up">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="already_have_acc">Уже есть аккаунт?</string>
    <string name="stuff_description_text">Описание товара</string>
    <string name="description">description</string>
    <string name="add_to_cart">Добавить в корзину</string>
</resources>