<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item
    android:id="@+id/navigation_home"
    android:title="@string/Home"
    app:showAsAction="ifRoom"
    android:icon="@drawable/ic_home"/>

    <item
        android:id="@+id/navigation_catalog"
        android:title="@string/Catalog"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort"/>
    <item
        android:id="@+id/navigation_account"
        android:title="@string/Account"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_circle"/>

    <item
        android:id="@+id/navigation_favourite"
        android:title="@string/Favourite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_baseline_favorite_24"/>

    <item
        android:id="@+id/navigation_basket"
        android:title="@string/Shop"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_shopping_basket"/>


</menu>